# trackio_ui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
trackio_ui/: data.py  main.py  utils.py
trackio_ui/components/: __init__.py  charts.py  side_panel.py  table.py  utils.py
trackio_ui/static/: charts.js  dashboard.js  sse.js
