[project]
authors = [
    { name = "Slava", email = "67190162+Ssslakter@users.noreply.github.com" },
]
dependencies = [
    "orjson",
    "polars",
    "monsterui",
    "black",
    "click",
    "pandas",
    "pyarrow",
    "trackio[gpu]",
]
name = "trackio_ui"
requires-python = ">= 3.11"
version = "0.1.0"
optional-dependencies = { dev = ["ruff", "jupyter"] }

[project.scripts]
trackio-ui = "trackio_ui.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.pypi-dependencies]
trackio_ui = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff]
line-length = 160
