[project]
authors = [
    { name = "Slava", email = "67190162+Ssslakter@users.noreply.github.com" },
]
description = "UI to visualize experiments tracked with trackio"
dependencies = [
    "orjson",
    "polars",
    "monsterui",
    "black",
    "click",
    "pandas",
    "pyarrow",
    "trackio[gpu]",
]
name = "trackio_ui"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.11"
version = "0.1.3"
optional-dependencies = { dev = [
    "ruff",
    "jupyter",
    "build",
    "python-semantic-release",
] }
keywords = ["deep-learning", "training", "visualization", "experiment-tracking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Repository" = "https://github.com/ssslakter/trackio_ui"


[project.scripts]
trackio-ui = "trackio_ui.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
trackio_ui = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff]
line-length = 160

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["patch", "minor", "fix", "feat", "release"]
minor_tags = ["minor", "feat"]
patch_tags = ["fix", "patch", "release"]
default_bump_level = 0
